--- a/css/style.css
+++ b/css/style.css
@@ -815,7 +815,7 @@ li {
 
 .case{
 	overflow-y:scroll;
-	position: absolute;
+	position: fixed;
 	width:100%;
 	height: 100%;
    	top: 0;
@@ -823,6 +823,7 @@ li {
     left: 0;		
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
+     will-change: transform;
  }
 .case-main .case {
     	background-color: #f1f1f1;
