--- a/css/style.css
+++ b/css/style.css
@@ -873,7 +873,7 @@ header {
     top: 0;
     transition: top 0.6s cubic-bezier(.72,.16,.345,.875) !important;
     width: 100%;
-	background: #f1f1f1;
+/*	background: #f1f1f1;*/
  }
 
 .description-begin{
