--- a/css/style.css
+++ b/css/style.css
@@ -515,7 +515,6 @@ nav h3:hover , footer h3:hover{
   }
 
 #scroller{
-     top: 0px;
 	right: 0px;
 	width: auto;
     list-style:none;
@@ -526,7 +525,7 @@ nav h3:hover , footer h3:hover{
 li {
    right: 0px;
    height: 130px;
-   top: 0px;
+   
 
 }
  
@@ -547,7 +546,22 @@ li {
     color: #fafafa;
  }
 
-.text-list:hover{
+.all-text-list {
+ 	display: block;
+     font-size: 10rem;
+    line-height: 1;
+	font-family: 'Gentium Basic', serif;
+    font-weight:700;
+    transition: all 0.5s cubic-bezier(0.7, 0.18, 0.15, 1);
+    color: rgb(0,0,0,0);
+  /* -webkit-text-stroke: 1.2px #141414;
+  text-stroke: 1.2px #141414;*/  
+    -webkit-text-stroke: 1.2px #fafafa;
+  text-stroke: 1.2px #fafafa;
+    color: #fafafa;
+ }
+
+.text-list:hover,.all-text-list:hover{
   -webkit-text-stroke: 1.2px #fafafa;
   text-stroke: 1.2px #fafafa;
   transition: all 0.5s cubic-bezier(0.7, 0.18, 0.15, 1);
@@ -555,6 +569,25 @@ li {
 	cursor: pointer;
 }
 
+ #holder {
+     z-index: 5;
+     top: 0;
+      width: 100%;
+    height: 100%;
+      line-height: 30px;
+      overflow: hidden;
+         }
+
+         #holder #scroll {
+         top: 0px;
+	right: 0px;
+	width: auto;
+        }
+
+        #holder  #scroller li {
+             text-align: center !important;
+           margin-top: 10%;
+        }
 
 
 .texts{
