--- a/css/style.css
+++ b/css/style.css
@@ -443,12 +443,10 @@ nav h3:hover , footer h3:hover{
   background-image: url("../imgs/bg-project-4.png");
 }
 
-
-/*
 .section.section-5 .bg-part {
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/captainamerica.jpg");
+  background-image: url("../imgs/tesla_design_studio_full.png");
 }
-
+/*
 .section.section-6 .bg-part {
   background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/blackwidow.jpg");
 }
