--- a/css/style.css
+++ b/css/style.css
@@ -868,6 +868,7 @@ li {
 }
  
 .item img{
+    opacity: 1;
     z-index: 2;
 	transform: scale(1);
 	vertical-align: middle;
@@ -882,8 +883,17 @@ li {
 }
 
 .item:hover img{
+    opacity: 0.4;
 	transform: matrix(1.05, 0, 0, 1.05, 0, 0);
 	transition: all .5s cubic-bezier(.72,.16,.345,.875)!important;
+}
+
+.titulo{
+    position: absolute;
+    color: white;
+    font-size: 25px;
+    margin: 0 auto;
+    z-index: 2;
 }
 
 
