--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,25 @@ img{
 	position:absolute;
   }
 
+.dot {
+	margin-left: 10%;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+	border-color: #fafafa;
+	border-style: solid;   
+	border-width: 1px;
+	display: inline-block;
+	-webkit-transition: all 0.5s ease;
+	transition: all 0.5s ease;
+}
+
+.dot-active{
+	background-color: #fafafa;
+	-webkit-transition: all 0.5s ease;
+	transition: all 0.5s ease;
+}
+
 
 nav h3, footer h3, footer i{
 	-webkit-touch-callout: none; /* iOS Safari */
@@ -126,10 +145,12 @@ nav h3, footer h3, footer i{
 .foot{
 	width: 10%;
 }
+
 .foot h3{
   display: inline-block;
   font-weight: 200;
   opacity:1 !important;
+ 	height: auto;
 }
 
 .foot h3:nth-child(2){
@@ -138,8 +159,7 @@ nav h3, footer h3, footer i{
 
 .foot:nth-child(2){
 	right: 0;
-    width: auto;
-}
+ }
  
 .logo:nth-child(2){
     color: #fafafa;
@@ -153,8 +173,8 @@ nav h3, footer h3, footer i{
 
 a h3{
     text-decoration:none;
-    
 }
+
 i{
     display: inline-block;
     width: auto;
@@ -165,7 +185,7 @@ i{
 .foot:nth-child(2){
     color: #fafafa;
 	margin-left: 25%;
-    opacity:1 !important;
+ 	opacity:1 !important;
 }
 
 .black{
@@ -196,7 +216,6 @@ nav h3:hover , footer h3:hover{
   background: #141414;
 	z-index: 0;
 }
-
 
 .about-main {
   width: 100%;
@@ -521,7 +540,7 @@ nav h3:hover , footer h3:hover{
 	position:absolute;
 	top: 45%;
 	margin: 0 auto;
-	width: 75%;
+	width: 85%;
 	height: 160px;
     overflow: hidden;
   }
@@ -543,7 +562,7 @@ li {
 	position: absolute;
 	display: block;
 	right: 0;
-    font-size: 15rem;
+    font-size: 10vw;
     line-height: 1;
 	font-family: 'Gentium Basic', serif;
     font-weight:700;
