--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,13 @@ img{
 	display: inline-block;
 	-webkit-transition: all 0.5s ease;
 	transition: all 0.5s ease;
+	cursor: pointer;
+}
+
+.dot:hover{
+	transform: scale(1.5);
+	-webkit-transition: all 0.5s ease;
+	transition: all 0.5s ease;
 }
 
 .dot-active{
