--- a/css/style.css
+++ b/css/style.css
@@ -487,7 +487,7 @@ nav h3:hover , footer h3:hover{
 }
 
 .section.section-5 .bg-part {
-  background-image: url("../imgs/tesla_design_studio_full.png");
+  background-image: url("../imgs/corvette.png");
 }
 /*
 .section.section-6 .bg-part {
