--- a/css/style.css
+++ b/css/style.css
@@ -150,8 +150,7 @@ nav h3, footer h3, footer i{
 .foot{
 	text-align: center;
 	width: 10%;
-	margin-left: 20%;
- }
+  }
 
 .foot h3{
   display: inline-block;
@@ -164,7 +163,7 @@ nav h3, footer h3, footer i{
 	margin-left: 55%;
 }
 
-.foot:nth-child(2){
+.foot:nth-child(3){
 	right: 0;
   }
 
@@ -712,7 +711,7 @@ li {
 	transition: 0.3s ease; 
 	margin-top: 0em;
   	font-size:0.9vw;
-    font-weight:500;
+    font-weight:100;
     letter-spacing:1px;
  	opacity: 1;
  }
@@ -899,12 +898,24 @@ li {
 
 /* 				ALL CASE STUDIES			*/
 
+.row{
+	position: absolute;
+	width: 40%;
+	margin-top: 10%;
+	height: auto;
+	display: inline-block;
+}
+.row:nth-child(2){
+	right: 0;
+	margin-top: 15%;
+}
+
 .item{
-    display: inline-block;
-    width: 600px;
+    display: block;
+    width: 100%;
     height: 600px;
+	margin-top: 5%;
     overflow: hidden;
-    margin: 5%;
     -webkit-clip-path: inset(0% 0%);
     clip-path: inset(0% 0%);
     transition: all .5s cubic-bezier(.72,.16,.345,.875)!important;
@@ -935,8 +946,8 @@ li {
     position: absolute;
     color: white;
     font-size: 25px;
-    margin: 0 auto;
-    z-index: 2;
+	margin: 0 auto;
+  	z-index: 2;
 }
 
 
