--- a/css/style.css
+++ b/css/style.css
@@ -905,16 +905,16 @@ li {
 	height: auto;
 	display: inline-block;
 }
+
 .row:nth-child(2){
 	right: 0;
-	margin-top: 15%;
+ 	margin-top: 15%;
 }
 
 .item{
     display: block;
     width: 100%;
-    height: 600px;
-	margin-top: 5%;
+ 	margin-top: 15%;
     overflow: hidden;
     -webkit-clip-path: inset(0% 0%);
     clip-path: inset(0% 0%);
@@ -922,6 +922,7 @@ li {
 }
  
 .item img{
+	width: 100%;
     opacity: 1;
     z-index: 2;
 	transform: scale(1);
