--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,8 @@ nav h3, footer h3, footer i{
 	font-weight: 200;
 	vertical-align: middle;
     letter-spacing: 1px;
- 	font-size:0.8vw;
+/* 	font-size:0.8vw;*/
+    font-size: calc(var(--font-size) *1.15);
 	opacity: 1;
     height: 50%;
 	-webkit-transition: all 0.5s ease;
