--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ nav h3, footer h3, footer i{
 	vertical-align: middle;
     letter-spacing: 1px;
 /* 	font-size:0.8vw;*/
-    font-size: calc(var(--font-size) *1.15);
+    font-size: 10px;
 	opacity: 1;
     height: 50%;
 	-webkit-transition: all 0.5s ease;
