--- a/css/style.css
+++ b/css/style.css
@@ -100,13 +100,12 @@ img{
  }
 
 .dot{
-	margin-top: 10px;
-    height: 8px;
-    width: 8px;
-    border-radius: 50%;
-	border-color: #fafafa;
-	border-style: solid;   
-	border-width: 1px;
+	margin-top: 12px;
+    height: 2px;
+    width: 6px;
+	opacity: 0.5;
+/*  border-radius: 50%;*/
+	background-color: #fafafa;
 	display: block;
 	-webkit-transition: all 0.5s ease;
 	transition: all 0.5s ease;
@@ -114,11 +113,14 @@ img{
 }
 
 .dot:hover{
+	width: 12px;
  	-webkit-transition: all 0.5s ease;
 	transition: all 0.5s ease;
 }
 
 .dot-active{
+	width: 12px;
+	opacity: 1;
 	background-color: #fafafa;
 	-webkit-transition: all 0.5s ease;
 	transition: all 0.5s ease;
