--- a/css/style.css
+++ b/css/style.css
@@ -1020,6 +1020,15 @@ li {
     background-color: #f1f1f1;
 }
 
+.title-bg{
+	background-image: url(../imgs/bg-cc.png);
+	background-size: 100%;
+	position: absolute;
+	width: 100%;
+	height: 70%;
+	overflow: hidden;
+}
+
 .header{
 	width: 85%;
  	left: 0;
@@ -1042,9 +1051,10 @@ li {
 	font-family: 'Gentium Basic', serif;
     font-weight:700;
 	letter-spacing: 5px;
-   font-size:8vw;
+    font-size:8vw;
     line-height: 1.25;
 	width: 100%;
+ 
 }
 
 .nav-up {
@@ -1138,16 +1148,16 @@ header {
  }
 
 .media{
-	width: 85%;
-	height: 100%;
- 	vertical-align: middle;
+ 	width: 80%;
+	vertical-align: middle;
 	margin: 8% auto;
-
 }
 
-.media img{
- 	width: 100%;
-}
+.media img, .media video{
+	width: 90%;
+	display: block;
+	margin: auto;
+    }
 
 .cont-media{
 	width: 100%;
