--- a/css/style.css
+++ b/css/style.css
@@ -487,7 +487,7 @@ nav h3:hover , footer h3:hover{
 }
 
 .section.section-3 .bg-part {
-  background-image: url("../imgs/bg-tostitos.png");
+  background-image: url("../imgs/tostitos-cover.png");
 }
 
 .section.section-2 .bg-part {
